// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuickAssessToAssessmentDialog dialog is hidden when isShown is false 1`] = `
<Dialog
  containerClassName="insightsDialogMainOverride"
  hidden={true}
  onDismiss={[Function]}
  title="Continue to assessment"
>
  <div>
    This will allow you to continue accessibility tesitng with addtitional tests and requirements in assessment. All your existing data in quick assess will be transfered into assessment.
  </div>
  <p>
    <Term>
      Note
    </Term>
    : 
    If you have an assessment in progress, the current quick assess evaluation data will replace the assessment evaluation and previous progress will be lost.
  </p>
  <StyledDialogFooterBase>
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
    <CustomizedPrimaryButton
      autoFocus={true}
      onClick={[Function]}
      text="Continue to assessment"
    />
  </StyledDialogFooterBase>
</Dialog>
`;

exports[`QuickAssessToAssessmentDialog dialog is not hidden when isShown is true 1`] = `
<Dialog
  containerClassName="insightsDialogMainOverride"
  hidden={false}
  onDismiss={[Function]}
  title="Continue to assessment"
>
  <div>
    This will allow you to continue accessibility tesitng with addtitional tests and requirements in assessment. All your existing data in quick assess will be transfered into assessment.
  </div>
  <p>
    <Term>
      Note
    </Term>
    : 
    If you have an assessment in progress, the current quick assess evaluation data will replace the assessment evaluation and previous progress will be lost.
  </p>
  <StyledDialogFooterBase>
    <CustomizedDefaultButton
      onClick={[Function]}
      text="Cancel"
    />
    <CustomizedPrimaryButton
      autoFocus={true}
      onClick={[Function]}
      text="Continue to assessment"
    />
  </StyledDialogFooterBase>
</Dialog>
`;
